--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -31,10 +31,10 @@
     <select id="objectives" name="objectives">
         <option value="{{user.objectives}}" selected>{{user.objectives}}</option>
         <option disabled value="──────────">──────────</option>
-        <option value="decrease-taxes">Decrease taxes</option>
-        <option value="optimize-savings">Optimize savings</option>
-        <option value="prep-future">Prepare the future</option>
-        <option value="increase-incomes">Increase incomes</option>
+        <option value="Decrease taxes">Decrease taxes</option>
+        <option value="Optimize savings">Optimize savings</option>
+        <option value="Prepare the future">Prepare the future</option>
+        <option value="Increase incomes">Increase incomes</option>
     </select>
 
     <label for="construction_works">Are you willing to do some construction works?</label>
