--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -33,7 +33,8 @@
         <option disabled value="──────────">──────────</option>
         <option value="Decrease taxes">Decrease taxes</option>
         <option value="Optimize savings">Optimize savings</option>
-        <option value="Prepare the future">Prepare the future</option>
+        <option value="Prepare
+         the future">Prepare the future</option>
         <option value="Increase incomes">Increase incomes</option>
     </select>
 
