--- a/views/partials/pro_filtered_contact_row.hbs
+++ b/views/partials/pro_filtered_contact_row.hbs
@@ -2,7 +2,7 @@
   <div>{{this.created_at}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.obectives}}</div>
+  <div>{{this.objectives}}</div>
 </td>
 <td class="table-division">
   <div>{{this.total_revenue}}</div>
@@ -10,10 +10,9 @@
 <td class="table-division">
   <div>{{this.areas}}</div>
 </td>
- <td class="table-division">
+<td class="table-division">
   <div>{{this.construction_works}}</div>
 </td>
- <td class="table-division">
-  <div><a href="/{{this._id}}" class="fas fa-cart-arrow-down" ></a></div>
+<td class="table-division">
+  <div><a href="/{{this._id}}" class="fas fa-cart-arrow-down"></a></div>
 </td>
-
