--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -6,7 +6,7 @@
         <li><input data-obj="Optimize savings"type="checkbox" />Optimize savings</li>
         <li><input data-obj="Prepare the future" type="checkbox" />Prepare the future</li>
         <li><input data-obj="Increase incomes" type="checkbox" />Increase incomes</li>
-        {{/each}}
+        {{!-- {{/each}} --}}
     </ul>
 </div>
 <div id="list2" class="dropdown-check-list" tabindex="100">
