--- a/views/partials/pro_filtered_contact_row.hbs
+++ b/views/partials/pro_filtered_contact_row.hbs
@@ -5,7 +5,7 @@
   <div>{{this.objectives}}</div>
 </td>
 <td class="table-division">
-  <div>{{this.total_revenue}}</div>
+  <div>{{this.total_revenue}}€</div>
 </td>
 <td class="table-division">
   <div>{{this.areas}}</div>
