--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -51,8 +51,8 @@
         <option value="{{user.areas}}" selected>{{user.areas}}</option>
         <option disabled value="──────────">──────────</option>
         <option value="One hour from Paris">One hour from Paris</option>
-        <option value="Two hours by train from Paris">Two hours by train from Paris</option>
-        <option value="Anywhere ! As long as money's raining">Anywhere ! As long as money's raining</option>
+        <option value="Two hours from Paris">Two hours from Paris</option>
+        <option value="Anywhere in France">Anywhere in France</option>
     </select>
 
     <label for="timeline">When will you be ready to invest?</label>
