--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -3,7 +3,7 @@
     <ul class="items" class="items">
         {{!-- {{#each investors.objectives}} --}}
         <li><input data-obj="Decrease taxes" type="checkbox" />Decrease taxes</li>
-        <li><input data-obj="Optimize savings"type="checkbox" />Optimize savings</li>
+        <li><input data-obj="Optimize savings" type="checkbox" />Optimize savings</li>
         <li><input data-obj="Prepare the future" type="checkbox" />Prepare the future</li>
         <li><input data-obj="Increase incomes" type="checkbox" />Increase incomes</li>
         {{!-- {{/each}} --}}
@@ -12,9 +12,9 @@
 <div id="list2" class="dropdown-check-list" tabindex="100">
     <div class="anchor">Select areas</div>
     <ul class="items" class="items">
-        <li><input type="checkbox" />Parisian surroundings</li>
-        <li><input type="checkbox" />Up to 2 hours away from Paris</li>
-        <li><input type="checkbox" />Up to 4 hours away form Paris</li>
+        <li><input data-area="One hour from Paris" type="checkbox" />Parisian surroundings</li>
+        <li><input data-area="Two hours from Paris" type="checkbox" />Up to 2 hours away from Paris</li>
+        <li><input data-area="Anywhere" type="checkbox" />Up to 4 hours away form Paris</li>
     </ul>
 </div>
 <div id="list3" class="dropdown-check-list" tabindex="100">
