--- a/views/partials/pro_filtered_contact_row.hbs
+++ b/views/partials/pro_filtered_contact_row.hbs
@@ -1,18 +1,20 @@
-<td class="table-division">
-  <div>{{this.created_at}}</div>
-</td>
-<td class="table-division">
-  <div>{{this.objectives}}</div>
-</td>
-<td class="table-division">
-  <div>{{this.total_revenue}}€</div>
-</td>
-<td class="table-division">
-  <div>{{this.areas}}</div>
-</td>
-<td class="table-division">
-  <div>{{this.construction_works}}</div>
-</td>
-<td class="table-division">
-  <div><a href="/{{this._id}}" class="fas fa-cart-arrow-down"></a></div>
-</td>
+<tr class="table-row">
+  <td class="table-division">
+    <div>{{this.created_at}}</div>
+  </td>
+  <td class="table-division">
+    <div>{{this.objectives}}</div>
+  </td>
+  <td class="table-division">
+    <div>{{this.total_revenue}}€</div>
+  </td>
+  <td class="table-division">
+    <div>{{this.areas}}</div>
+  </td>
+  <td class="table-division">
+    <div>{{this.construction_works}}</div>
+  </td>
+  <td class="table-division">
+    <div><a href="/{{this._id}}" class="fas fa-cart-arrow-down"></a></div>
+  </td>
+</tr>
