--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -24,11 +24,12 @@
         <li><input data-time="In the next few months" type="checkbox" />In the next few months</li>
     </ul>
 </div>
-{{!-- <div id="list4" class="dropdown-check-list" tabindex="100">
+
+<div id="list4" class="dropdown-check-list items" tabindex="100">
     <div class="anchor">Select income range</div>
-    <ul class="items" class="items">
-        <li><input data-time="Now" type="checkbox"/>less than 2000 </li>
-        <li><input data-time="Now" type="checkbox"/>between 2000 and 3500</li>
-        <li><input data-time="Now" type="checkbox"/>more than 3500</li>
-    </ul>
-</div> --}}
+    <p>0€</p>
+    <p id="display-value">5000</p>
+
+    <input id="range-input" type="range" name="points" min="0" max="10000" value="5000">
+    <p>10 000€ et +</p>
+</div>
