--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -25,11 +25,7 @@
     </ul>
 </div>
 
-<div id="list4" class="dropdown-check-list items" tabindex="100">
-    <div class="anchor">Select income range</div>
-    <p>0€</p>
-    <p id="display-value">5000</p>
-
-    <input id="range-input" type="range" name="points" min="0" max="10000" value="5000">
-    <p>10 000€ et +</p>
+<div id="range-section" class="items">
+    <p id="display-value">0€ and more</p>
+    <input id="range-input" step="500" type="range" name="points" min="0" max="20000" value="0">
 </div>
