--- a/public/css/pro.css
+++ b/public/css/pro.css
@@ -85,3 +85,18 @@ min-height: 71vh
     color: white
 }
 
+body{
+  font-family: 'Helvetica Neue', Helvetica, Arial;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  color: #3b3b3b;
+  -webkit-font-smoothing: antialiased;
+  
+}
+  /* @media {
+    screen and (max-width: 580px);
+    font-size: 16px;
+    line-height: 22px;
+  } */
+   
