FILTRE construction work added

--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -14,7 +14,7 @@
     <ul class="items" class="items">
         <li><input data-area="One hour from Paris" type="checkbox" />Parisian surroundings</li>
         <li><input data-area="Two hours from Paris" type="checkbox" />Up to 2 hours away from Paris</li>
-        <li><input data-area="Anywhere" type="checkbox" />Up to 4 hours away form Paris</li>
+        <li><input data-area="Anywhere in France" type="checkbox" />Up to 4 hours away form Paris</li>
     </ul>
 </div>
 <div id="list3" class="dropdown-check-list" tabindex="100">
@@ -22,6 +22,13 @@
     <ul class="items" class="items">
         <li><input data-time="Now" type="checkbox" />Now </li>
         <li><input data-time="In the next few months" type="checkbox" />In the next few months</li>
+    </ul>
+</div>
+<div id="list4" class="dropdown-check-list" tabindex="100">
+    <div class="anchor">Select Construction Works</div>
+    <ul class="items" class="items">
+        <li><input data-const="Yes" type="checkbox" />Yes </li>
+        <li><input data-const="No" type="checkbox" />No</li>
     </ul>
 </div>
 
