--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -4,31 +4,34 @@
         <h1 class="form-title">Signup up User!</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
-    {{#if msg}}
-    <p class="message {{msg.status}}">{{msg.text}}</p>
-    {{/if}}
-    <form method="post" action="/signup" id="form_user">
-        <div class="form-item-wrapper flexed-item">
-            <label for="firstname" class="label-ref label">Name</label>
-            <input id="firstname" type="text" name="firstname" class="input-text input" placeholder="Albert" required
-                value="Amine">
-        </div>
-        <div class="form-item-wrapper flexed-item">
-            <label for="lastname" class="label-ref label">Last Name</label>
-            <input id="lastname" type="text" name="lastname" class="input-text input" placeholder="Biceps" required
-                value="Lahrichi">
-        </div>
-        <div class="form-item-wrapper flexed-item">
-            <label for="email" class="label-ref label">Email</label>
-            <input id="email" type="email" name="email" class="input-text input" placeholder="sarah.hehe@gmail.com"
-                required value="amine@yeay.fr">
-        </div>
-        <div class="form-item-wrapper flexed-item">
-            <label for="password" class="label-ref label">Password</label>
-            <input id="password" type="password" name="password" class="input-text input" placeholder="••••••" required
-                value="1234">
-        </div>
-        <button class="button-primary white">Create Account</button>
-    </form>
-    <p class="form-sub-infos">Already have an account ? <a href="/signin" class="button-link-form">Sign In</a></p>
+    <div class="sign-block">
+        {{#if msg}}
+        <p class="message {{msg.status}}">{{msg.text}}</p>
+        {{/if}}
+
+        <form method="post" action="/signup" id="form_user">
+            <div class="form-item-wrapper flexed-item">
+                <label for="firstname" class="label-ref label">Name</label>
+                <input id="firstname" type="text" name="firstname" class="input-text input" placeholder="Albert"
+                    required value="Amine">
+            </div>
+            <div class="form-item-wrapper flexed-item">
+                <label for="lastname" class="label-ref label">Last Name</label>
+                <input id="lastname" type="text" name="lastname" class="input-text input" placeholder="Biceps" required
+                    value="Lahrichi">
+            </div>
+            <div class="form-item-wrapper flexed-item">
+                <label for="email" class="label-ref label">Email</label>
+                <input id="email" type="email" name="email" class="input-text input" placeholder="sarah.hehe@gmail.com"
+                    required value="amine@yeay.fr">
+            </div>
+            <div class="form-item-wrapper flexed-item">
+                <label for="password" class="label-ref label">Password</label>
+                <input id="password" type="password" name="password" class="input-text input" placeholder="••••••"
+                    required value="1234">
+            </div>
+            <button class="button-primary white">Create Account</button>
+        </form>
+        <p class="form-sub-infos">Already have an account ? <a href="/signin" class="button-link-form">Sign In</a></p>
+    </div>
 </section>
