--- a/public/css/pro.css
+++ b/public/css/pro.css
@@ -70,13 +70,15 @@ body {
     font-size: 14px;
     line-height: 20px;
     font-weight: 400;
-    color: #3b3b3b;
+    color: white;
+    background-color: #4F5D75;
     -webkit-font-smoothing: antialiased;
+
     @media screen and (max-width: 580px) {
         font-size: 16px;
         line-height: 22px;
     }
-    
+
 }
 
 
@@ -89,11 +91,10 @@ body {
 .table {
     margin: 0 0 40px 0;
     width: 100%;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
     display: table;
 
     @media screen and (max-width: 580px) {
-
         display: block;
     }
 }
@@ -101,9 +102,7 @@ body {
 .row {
     display: table-row;
     background: #f6f6f6;
-
-
-
+    color: #4F5D75
 }
 
 .row:nth-of-type(odd) {
