--- a/views/partials/pro_filtered_contacts.hbs
+++ b/views/partials/pro_filtered_contacts.hbs
@@ -5,7 +5,7 @@
             <div class="cell">Objective(s)</div>
             <div class="cell">Revenue</div>
             <div class="cell">Area</div>
-            <div class="cell">Open to construction works</div>
+            <div class="cell">Construction works</div>
             <div class="cell">Cart</div>
         </div>
         
