signin & up value updated

--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -23,7 +23,7 @@
             <div class="form-item-wrapper flexed-item">
                 <label for="email" class="label-ref label">Email</label>
                 <input id="email" type="email" name="email" class="input-text input" placeholder="sarah.hehe@gmail.com"
-                    required value="amine@yeay.fr">
+                    required value="hello@keeyz.fr">
             </div>
             <div class="form-item-wrapper flexed-item">
                 <label for="password" class="label-ref label">Password</label>
