--- a/views/auth/pro/signin.hbs
+++ b/views/auth/pro/signin.hbs
@@ -15,12 +15,13 @@
         <form method="post" action="/pro/signin" id="form_user">
             <div class="form-item-wrapper">
                 {{!-- <label for="email" class="label-ref label">Email</label> --}}
-                <input id="email" type="email" class="input-text input" name="email" placeholder="Email" required>
+                <input id="email" type="email" class="input-text input" name="email" placeholder="Email" required
+                    value="pro@keeyz.fr">
             </div>
             <div class="form-item-wrapper flexed-item">
                 {{!-- <label for="password" class="label-ref label">Password</label> --}}
                 <input id="password" type="password" class="input-text input" placeholder="••••••" required
-                    name="password">
+                    name="password" value="1234">
             </div>
             <button class="button-primary white">Log in !</button>
             <p class="form-sub-infos">Don't have an account yet ? <a href="/pro/signup" class="button-link-form">Sign
