--- a/views/pro/index-pro.hbs
+++ b/views/pro/index-pro.hbs
@@ -3,5 +3,6 @@
 <div class="promise-pro">
     <h1>Win yourself some time</h1>
     <h4>Our high-profile young investors are waiting for you to get into action</h4>
-    <button><a href="/pro/dashboard">Get in touch with them</a></button>
+    {{!-- <img src="/img/Success.png" alt="success"> --}}
+    <button id="btn-pro"><a href="/pro/dashboard">Try now</a></button>
 </div>
