background landing investor + button investor

--- a/views/partials/nav_bar_pro.hbs
+++ b/views/partials/nav_bar_pro.hbs
@@ -17,7 +17,7 @@
             <a href="/logout">Log out</a>
             {{/if}}
 
-            <a class="type-user" href="/">Investor</a>
+            <a class="type-user investor" href="/">Investor</a>
         </div>
     </nav>
 </header>
