--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,6 +7,7 @@
     justify-content: space-evenly;
     align-items: space-evenly;
     height: 71vh;
+    background-image: url("/img/background-orange.png");
 }
 .landing-container>h1{
     text-align: center;
