--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -72,6 +72,10 @@ body {
     box-shadow: 0px 2px 3px black;
 }
 
+.type-user.investor{
+    border: solid 2px #f48c6c;
+    background-color: #f48c6c;
+}
 .main-footer * {
     color: white;
 }
