--- a/views/partials/nav_bar_pro.hbs
+++ b/views/partials/nav_bar_pro.hbs
@@ -12,7 +12,7 @@
             {{#if isLoggedIn}}
             {{#compare userType "pro" operator="==="}}
             <a href="/pro/dashboard">Dashboard</a>
-            <a href="/pro/cart"><i class="fas fa-shopping-cart"></i></a>
+            <a href="/pro/cart" id="cart">Mon panier (0)</a>
             {{/compare}}
             <a href="/logout">Log out</a>
             {{/if}}
