style the input range

--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -47,13 +47,15 @@
         <option value="No">No</option>
     </select>
 
-    <label for="areas">Where do you want to invest?</label>
+    <label for="areas">Where in France do you want to invest?</label>
     <select id="areas" name="areas">
         <option value="{{user.areas}}" selected>{{user.areas}}</option>
         <option disabled value="──────────">──────────</option>
-        <option value="One hour from Paris">One hour from Paris</option>
-        <option value="Two hours from Paris">Two hours from Paris</option>
-        <option value="Anywhere in France">Anywhere in France</option>
+        <option value="East">East</option>
+        <option value="North">North</option>
+        <option value="South">South</option>
+        <option value="South-West">South-West</option>
+        <option value="West">West</option>
     </select>
 
     <label for="timeline">When will you be ready to invest?</label>
