--- a/public/css/pro.css
+++ b/public/css/pro.css
@@ -51,11 +51,13 @@
 .revenue>label{
     grid-row: 2/3;
     grid-column: 1/2;
-    margin-right: 20px
+    margin-right: 20px;
+    align-self: center;
 }
 .revenue>input{
     grid-row: 2/3;
     grid-column: 2/6;
+    align-self: center;
     
 }
 
