--- a/views/partials/pro_filtered_contact_row.hbs
+++ b/views/partials/pro_filtered_contact_row.hbs
@@ -15,7 +15,7 @@
     {{this.construction_works}}
   </div>
   <div class="cell icon" data-title="cart">
-    <a href="/{{this._id}}" data-id="{{this._id}}" class="fas fa-cart-arrow-down"></a>
+    <a href="{{this._id}}" data-id="{{this._id}}" class="fas fa-plus-circle"></a>
   </div>
 </div>
 
