--- a/views/pro/cart.hbs
+++ b/views/pro/cart.hbs
@@ -3,7 +3,7 @@
 <div class="shopping-cart">
     <!-- Title -->
     <div class="title">
-        Shopping Bag
+        You're one step from very qualified contacts!
     </div>
 
     <!-- Product #1 -->
@@ -11,16 +11,14 @@
         <div class="buttons">
             <span class="delete-btn"></span>
             <span class="like-btn"></span>
-        </div>
+        </div>  
 
         <div class="image">
             <img src="img/phone.png" alt="" />
         </div>
 
         <div class="description">
-            <span>Common Projects</span>
-            <span>Bball High</span>
-            <span>White</span>
+            <p>Contact list</p>
         </div>
 
         <div class="quantity">
@@ -34,65 +32,5 @@
         </div>
 
         <div class="total-price">$549</div>
-    </div>
-
-    <!-- Product #2 -->
-    <div class="item">
-        <div class="buttons">
-            <span class="delete-btn"></span>
-            <span class="like-btn"></span>
-        </div>
-
-        <div class="image">
-            <img src="img/phone.png" alt="" />
-        </div>
-
-        <div class="description">
-            <span>Maison Margiela</span>
-            <span>Future Sneakers</span>
-            <span>White</span>
-        </div>
-
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="minus.svg" alt="" />
-            </button>
-        </div>
-
-        <div class="total-price">$870</div>
-    </div>
-
-    <!-- Product #3 -->
-    <div class="item">
-        <div class="buttons">
-            <span class="delete-btn"></span>
-            <span class="like-btn"></span>
-        </div>
-
-        <div class="image">
-            <img src="img/phone.png" alt="" />
-        </div>
-
-        <div class="description">
-            <span>Our Legacy</span>
-            <span>Brushed Scarf</span>
-            <span>Brown</span>
-        </div>
-
-        <div class="quantity">
-            <button class="plus-btn" type="button" name="button">
-                <img src="plus.svg" alt="" />
-            </button>
-            <input type="text" name="name" value="1">
-            <button class="minus-btn" type="button" name="button">
-                <img src="minus.svg" alt="" />
-            </button>
-        </div>
-
-        <div class="total-price">$349</div>
     </div>
 </div>
