form en train d'être mis en forme

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -3,3 +3,76 @@
     flex-direction: column;
     width: 500px;
 }
+
+.progression{
+    display: flex;
+    width: 90vw;
+    align-self: center;
+}
+
+hr{
+    margin: 10px;
+    width: 40%;
+    border-radius: 15px;
+}
+
+hr.color{
+    border: 2px solid #4F5D75;
+    
+}
+
+hr.no-color{
+    border: 2px solid #E6DFDF;
+}
+
+.needed{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.needed> i {
+    margin: 20px;
+    font-size: 1.5rem
+}
+
+.form-init{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.title{
+    margin: 50px 30vw;
+}
+
+.form-init>div{
+    margin: 0 30vw;
+    background-color: white;
+    padding: 40px;
+    border-radius: 15px;
+}
+
+.list{
+    margin-top: 30px;
+    
+}
+.list>div{
+    margin-left: 20px
+}
+
+.btn{
+    padding: 20px 40px;
+    border-radius: 15px;
+    background-color: #F48C6C;
+    border: none;
+    font-size: 1.2rem;
+}
+
+body{
+    background-color:#F48C6C ;
+}
+
+.bold{
+    font-weight: 700;
+}
