--- a/views/invest/form-1.hbs
+++ b/views/invest/form-1.hbs
@@ -1,4 +1,9 @@
 {{> nav_bar_investor}}
+
+<div class="progression">
+    <hr class="color">
+    <hr class="no-color">
+</div>
 <div>
     <h2>Your project</h2>
     <form id="fill-my-form-project" method="post" action="/form-1" class="form">
