--- a/views/invest/form-2.hbs
+++ b/views/invest/form-2.hbs
@@ -1,4 +1,10 @@
 {{> nav_bar_investor}}
+<div class="progression">
+    
+    <hr class="color">
+    <hr class="color">
+</div>
+
 <div>
     <h2>Your situation</h2>
     <form id="fill-my-form-situation" method="post" action="/form-2" class="form">
