--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -1,25 +1,31 @@
 {{!-- Gérer le nom si l'investisseur est loggé ou non --}}
 {{> nav_bar_investor}}
-<h1 class="title">Hello {{user.firstname}}!</h1>
 
-<div>
-    <p> Before we can help you, we have some questions for you.
-        These informations are necessary so we can find the best partner to make your project get real.
-    </p>
-    <div class="list">Make sure you have:
-        <div class="needed">
-            <i class="fas fa-hourglass-start"></i>
-            <li>10 minutes</li>
+<div class="form-init">
+
+    <h1 class="title">Hello {{user.firstname}}!</h1>
+
+    <div>
+        <p class="bold"> Before we can help you, we have some questions for you. </p>
+        <p> These informations are necessary so we can find the best partner to make your project get real.
+        </p>
+        <div class="list">Make sure you have in front of you:
+            <div class="needed">
+                <i class="fas fa-hourglass-start"></i>
+                <p>10 minutes</p>
+            </div>
+            <div class="needed">
+                <i class="far fa-file-alt"></i>
+                <p>Your pay sheet</p>
+            </div>
+            <div class="needed">
+                <i class="far fa-file-alt"></i>
+                <p>Your income tax return</p>
+
+            </div>
+            <a href="/form-1"><button class="btn">Get started</button></a>
         </div>
-        <div class="needed">
-            <i></i>
-            <li>Your pay sheet</li>
-        </div>
-        <div class="needed">
-            <i></i>
-            <li>Your income tax return</li>
-        </div>
+
     </div>
 
 </div>
-<a href="/form-1"><button>Get started</button></a>
