--- a/views/invest/form.hbs
+++ b/views/invest/form.hbs
@@ -5,7 +5,7 @@
 
     <h1 class="title">Hello {{user.firstname}}!</h1>
 
-    <div>
+    <div class="form">
         <p class="bold"> Before we can help you, we have some questions for you. </p>
         <p> These informations are necessary so we can find the best partner to make your project get real.
         </p>
@@ -23,9 +23,9 @@
                 <p>Your income tax return</p>
 
             </div>
-            <a href="/form-1"><button class="btn">Get started</button></a>
+
+
         </div>
-
+        <a href="/form-1"><button class="btn">Get started</button></a>
     </div>
-
 </div>
