--- a/public/css/form.css
+++ b/public/css/form.css
@@ -8,6 +8,9 @@
     display: flex;
     width: 90vw;
     align-self: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 hr{
@@ -46,16 +49,26 @@ hr.no-color{
     margin: 50px 30vw;
 }
 
+.title-form{
+    margin: 30px 0 20px;
+}
 .form-init>div{
     margin: 0 30vw;
+    
+}
+
+.form{
     background-color: white;
     padding: 40px;
     border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    min-width: 600px;
 }
 
 .list{
     margin-top: 30px;
-    
+    font-weight: 500;
 }
 .list>div{
     margin-left: 20px
@@ -63,10 +76,14 @@ hr.no-color{
 
 .btn{
     padding: 20px 40px;
+    margin: 20px;
     border-radius: 15px;
     background-color: #F48C6C;
     border: none;
     font-size: 1.2rem;
+    font-weight: 700;
+    color: white;
+    
 }
 
 body{
@@ -76,3 +93,25 @@ body{
 .bold{
     font-weight: 700;
 }
+
+.form-init>div>a{
+    align-self: center;
+}
+
+.form-container{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+
+/* .answer{
+    margin-bottom: 20px;
+} */
+
+select, input{
+    padding: 5px;
+    margin-bottom: 20px;
+}
+
+
