landing page improvement

--- a/views/invest/index.hbs
+++ b/views/invest/index.hbs
@@ -1,7 +1,7 @@
 {{> nav_bar_investor}}
 
 <div class="landing-container">
-    <h1>Become the next world leader</h1>
+    <h1>Invest. Now.</h1>
     <div class="value-proposition">
         <div>
             <img src="/img/walking.png" alt="img">
