--- a/public/css/index.css
+++ b/public/css/index.css
@@ -4,10 +4,13 @@
 .landing-container {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: space-evenly;
-    height: 71vh;
+    height: 90vh;
     background-image: url("/img/background-orange.png");
+    background-repeat: no-repeat;
+    background: cover;
+    padding: 10vh 0;
 }
 .landing-container>h1{
     text-align: center;
@@ -17,7 +20,7 @@
 .value-proposition {
     display: flex;
     justify-content: space-evenly;
-   
+   margin: 5vw;
 }
 
 .value-proposition>div {
