filtre budget ajouté

--- a/views/partials/pro_filtered_contacts.hbs
+++ b/views/partials/pro_filtered_contacts.hbs
@@ -3,6 +3,7 @@
         <div class="row header">
             <div class="cell">Looking to buy</div>
             <div class="cell">Objective(s)</div>
+            <div class="cell">Budget</div>
             <div class="cell">Revenue</div>
             <div class="cell">Area</div>
             <div class="cell">Construction works</div>
