--- a/views/partials/pro_filters.hbs
+++ b/views/partials/pro_filters.hbs
@@ -37,11 +37,20 @@
     </div>
 </div>
 
+
 <div id="range-section" class="items">
     <div class="revenue">
         <p id="display-value">0€ and more</p>
 
         <label for="points">Revenue/month:</label>
         <input id="range-input" step="500" class="slider" type="range" name="points" min="0" max="20000" value="0">
+    </div>
+</div>
+<div id="range-section-2" class="items">
+    <div class="revenue">
+        <p id="display-value-2">0€ and more</p>
+
+        <label for="budget">Budget:</label>
+        <input id="range-budget" step="10000" class="slider" type="range" name="budget" min="0" max="1000000" value="0">
     </div>
 </div>
