--- a/views/partials/pro_filtered_contact_row.hbs
+++ b/views/partials/pro_filtered_contact_row.hbs
@@ -5,6 +5,9 @@
   <div class="cell" data-title="obj">
     {{this.objectives}}
   </div>
+  <div class="cell" data-title="budg">
+    {{this.budget}}
+  </div>
   <div class="cell" data-title="rev">
     {{this.total_revenue}}
   </div>
