--- a/public/css/pro.css
+++ b/public/css/pro.css
@@ -42,7 +42,7 @@
 
 .revenue {
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20px);
     grid-template-columns: repeat(5, 1fr);
 }
 
