--- a/views/pro/cart.hbs
+++ b/views/pro/cart.hbs
@@ -15,7 +15,7 @@
         <div class="total-price">{{currentCart.price}}€</div>
     </div>
     <div class="button-section">
-        <a href="/pro/checkout/{{currentUser._id}}"><button class="btn" id="buttonCheckout">Buy></a>
+        <a href="/pro/checkout/{{currentUser._id}}"><button class="btn" id="buttonCheckout">Buy</a>
     </div>
     {{else}}
     <div class="title">
