--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #f48c6c
+    background-image: url("/img/background-orange.png");
+    
 }
 
 /* .form-container {} */
