--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -21,6 +21,11 @@
                     value="Lahrichi">
             </div>
             <div class="form-item-wrapper flexed-item">
+                <label for="number" class="label-ref label">Last Name</label>
+                <input id="number" type="text" name="number" class="input-text input" placeholder="0160609801" required
+                    value="0147200001">
+            </div>
+            <div class="form-item-wrapper flexed-item">
                 <label for="email" class="label-ref label">Email</label>
                 <input id="email" type="email" name="email" class="input-text input" placeholder="sarah.hehe@gmail.com"
                     required value="hello@keeyz.fr">
