--- a/views/auth/investor/signup.hbs
+++ b/views/auth/investor/signup.hbs
@@ -1,7 +1,8 @@
+   {{>nav_bar_investor}}
 <section class="sign form-container">
-    {{>nav_bar_investor}}
+ 
     <header class="form-header">
-        <h1 class="form-title">Signup up User!</h1>
+        <h1 class="form-title">Sign up !</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
     <div class="sign-block">
@@ -35,8 +36,9 @@
                 <input id="password" type="password" name="password" class="input-text input" placeholder="••••••"
                     required value="1234">
             </div>
-            <button class="button-primary white">Create Account</button>
+            <button class="button-primary white btn">Create Account</button>
+            <p class="form-sub-infos">Already have an account ? <a href="/signin" class="button-link-form">Sign In</a></p>
         </form>
-        <p class="form-sub-infos">Already have an account ? <a href="/signin" class="button-link-form">Sign In</a></p>
+        
     </div>
 </section>
