--- a/views/auth/pro/signup.hbs
+++ b/views/auth/pro/signup.hbs
@@ -1,7 +1,7 @@
 {{>nav_bar_pro}}
 <section class="sign form-container">
     <header class="form-header">
-        <h1 class="form-title">Start your journey Pro!</h1>
+        <h1 class="form-title">Start your journey !</h1>
         <p class="form-subtitle">Enjoy yourself and be comfortable</p>
     </header>
     {{#if msg}}
@@ -37,7 +37,9 @@
             <input id="password" type="password" name="password" class="input-text input" placeholder="••••••" required
                 value="1234">
         </div>
+    
         <button class="button-primary white">Create Account</button>
-    </form>
     <p class="form-sub-infos">Already have an account ? <a href="/pro/signin" class="button-link-form">Sign In</a></p>
-</section>
+
+    </form>
+    </section>
