--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -14,7 +14,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #E6DFDF
+    background-color: #E6DFDF;
+
 }
 
 .link-nav * {
@@ -72,10 +73,11 @@ body {
     box-shadow: 0px 2px 3px black;
 }
 
-.type-user.investor{
+.type-user.investor {
     border: solid 2px #f48c6c;
     background-color: #f48c6c;
 }
+
 .main-footer * {
     color: white;
 }
